hphp/hack/test/typecheck/readonly/union_type.php.exp
File "union_type.php", line 33, characters 3-9:
Invalid property assignment (Typing[4411])
  File "union_type.php", line 33, characters 13-30:
  This expression is readonly
  File "union_type.php", line 7, characters 10-12:
  But it's being assigned to a mutable property
File "union_type.php", line 40, characters 3-9:
Invalid property assignment (Typing[4411])
  File "union_type.php", line 40, characters 13-30:
  This expression is readonly
  File "union_type.php", line 7, characters 10-12:
  But it's being assigned to a mutable property
